Add CSRF fix but it is not being used right now

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -28,6 +28,10 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/iziToast.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/user-details.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/static/styles/admin-panel-product.css}">
+
+    <!-- CSRF Fix -->
+    <!--    <meta th:name="_csrf" th:content="${_csrf.token}"/>-->
+    <!--    <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>-->
 </head>
 
 <body>
